<resources>
    <string name="app_name">Socialco</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_button">Зарегестрироваться</string>
    <string name="login_button">Войти</string>
    <string name="password_hint">Пароль</string>
    <string name="login_hint">Логин</string>
    <string name="name_hint">Имя</string>
    <string name="surname_hint">Фамилия</string>
    <string name="email_hint">Эл. почта</string>
    <string name="agreement">Я соглашаюсь с какими-то там условиями</string>
</resources>
